--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,20 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+YelpApiKey = "Bearer AAAAAAAAAAAAAAAAAAAAAHlZbAEAAAAACy6yiG8V1E4HiPnB7Hna%2FCNI6W0%3DSk1uuzxfOBaYXf8yx1IdeJQuHtGCJkAFtQOJhFfPqcvmOFeNND"
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
