Revert "Deleted unused code and files"
This reverts commit 32c29d40ec88875869ad6dcbb7786947d8a0d09c.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
         <activity
             android:name=".LocationActivity"
             android:exported="false" />
-
+        <activity
+            android:name=".FashionActivity"
+            android:exported="false" />
+        <activity
             android:name=".Restaurants"
             android:exported="false" />
         <activity
