Added functionality to write locations to firebase

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,8 @@ android.useAndroidX=true
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-YelpApiKey = "Bearer AAAAAAAAAAAAAAAAAAAAAHlZbAEAAAAACy6yiG8V1E4HiPnB7Hna%2FCNI6W0%3DSk1uuzxfOBaYXf8yx1IdeJQuHtGCJkAFtQOJhFfPqcvmOFeNND"
+TwitterApiKey = "Bearer AAAAAAAAAAAAAAAAAAAAAHlZbAEAAAAABmOZUKLYP6IHV%2FJhILI18NoTPZQ%3DAfnoKHLaHLMKnx0gYJ5qFrCQMzHC6EhRQIsFXCQQvDwwoNtBd0"
+
 
 
 
