--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -18,7 +19,7 @@ android {
             viewBinding true
         }
         buildTypes.each {
-            it.buildConfigField 'String', 'YELP_API_KEY', YelpApiKey
+            it.buildConfigField 'String', 'TWITTER_API_KEY', TwitterApiKey
         }
 
     }
@@ -46,4 +47,16 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
+    implementation 'com.google.firebase:firebase-analytics:20.1.2'
+    implementation 'com.google.firebase:firebase-database:20.0.4'
 }
+
+
+
+
+
+
+
+
+
