--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-analytics:20.1.2'
     implementation 'com.google.firebase:firebase-database:20.0.4'
+
+    implementation 'com.google.android.material:material:1.5.0'
 }
 
 
