--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.4'
 
     implementation 'com.google.android.material:material:1.5.0'
+
+    implementation 'com.google.firebase:firebase-database'
+    implementation 'com.firebaseui:firebase-ui-database:7.1.1'
 }
 
 
