--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MartketPlace"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".SavedWishlist"
+            android:exported="false" />
+        <activity
             android:name=".auth.Sign_Up"
             android:exported="false" />
         <activity
@@ -38,7 +41,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
